--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ android {
 }
 
 dependencies {
-
+    //implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'com.android.support:appcompat-v7:28.0.0'
     //implementation 'androidx.appcompat:appcompat:1.6.0'
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
