--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,8 @@ android {
 
     defaultConfig {
         applicationId "com.example.myapplication"
-        minSdk 21
+        minSdkVersion 26
+
         targetSdk 34
         versionCode 1
         versionName "1.0"
@@ -29,6 +30,8 @@ android {
 
 dependencies {
 
+    implementation 'com.android.volley:volley:1.2.1'
+    implementation 'org.postgresql:postgresql:42.5.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
 
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
