--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
+
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
         <activity
             android:name=".dialog_client"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".activity_ajout_compteur"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,6 +28,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".EditClientActivity" />
+        <activity android:name=".EditCompteurActivity" />
     </application>
 
 </manifest>
